--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,3 +11,4 @@ edition = "2021"
 crate-type = ["cdylib"]  
 
 [dependencies]
+godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
